# HomeWork_21.2

./: .gitignore  catalog.html  category.html  contacts.html  main_page.html  pyproject.toml  server.py
